# household-budget

./: .gitignore  DEPLOYMENT.md  RAILWAY_DEPLOY.md  README.md  package-lock.json  run-backend.sh  run-frontend.sh  split-repo.sh
backend/: .gitignore  Procfile  README.md  dev.sh  manage.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
backend/apps/accounts/: models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_user_nickname.py  0003_user_phone.py
backend/apps/assets/: models.py
backend/apps/assets/migrations/: 0001_initial.py
backend/apps/categories/: models.py  serializers.py  views.py
backend/apps/categories/migrations/: 0001_initial.py
backend/apps/transactions/: filters.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/transactions/migrations/: 0001_initial.py
backend/household_budget/: asgi.py  settings.py  urls.py  wsgi.py
backend/household_budget/settings/: base.py  dev.py  prod.py
backend/middleware/: auth_middleware.py
frontend/quasar-project/: README.md  package-lock.json  package.json  quasar.config.js  vercel.json
frontend/quasar-project/src/components/: CategoryTree.vue
frontend/quasar-project/src/layouts/: MainLayout.vue
frontend/quasar-project/src/pages/: CategoryManager.vue  IndexPage.vue  TransactionManager.vue
frontend/quasar-project/src/router/: routes.js
frontend/quasar-project/src/services/: api.js
