[project]
name = "household-budget"
version = "0.1.0"
description = "가계부 애플리케이션 백엔드"
requires-python = ">=3.10"
dependencies = [
    "asgiref==3.8.1",
    "attrs==25.3.0",
    "Django==5.2.1",
    "django-cors-headers==4.7.0",
    "django-environ==0.12.0",
    "django-filter>=24.0",
    "djangorestframework==3.16.0",
    "drf-spectacular==0.28.0",
    "drf-yasg==1.21.10",
    "gunicorn>=21.2.0",
    "inflection==0.5.1",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "packaging==25.0",
    "psycopg2-binary==2.9.10",
    "python-decouple==3.8",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "referencing==0.36.2",
    "rpds-py==0.25.1",
    "sqlparse==0.5.3",
    "typing_extensions==4.14.0",
    "tzdata==2025.2",
    "uritemplate==4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
